Allow manually unlocking projects
